--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "4.2.0",
     "history": "^4.10.1",
     "materialize-css": "^1.0.0",
+    "moment": "^2.26.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
